[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.17,<3.11"
pandas = "^2.0.3"
boto3 = "^1.28.35"
requests = "^2.31.0"
awswrangler = "^3.3.0"

[tool.poetry.dev-dependencies]
unittest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"